add some GSAP code

--- a/style.css
+++ b/style.css
@@ -28,6 +28,9 @@ html, body {
     border: 5px solid white;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
+.animated-text{
+    white-space: nowrap;
+}
 .left, .right {
     display: flex;
     align-items: center;
@@ -98,9 +101,6 @@ html, body {
 .skills-section {
     max-width: 1000px;
     text-align: center;
-    opacity: 0;
-    transform: translateY(20px);
-    animation: fadeInUp 1s ease-in-out forwards;
     margin: 0 auto;
     padding: 50px 20px;
 }
