--- a/style.css
+++ b/style.css
@@ -9,6 +9,13 @@ html, body {
     background-color: #F1F0EF;
     color: #333;
 }
+body {
+    user-select: none;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+}
+
 #em{
     font-size: large;
     font-weight: bolder;
